--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 fs_extra = "1.2.0"
-pyo3 = "0.16.5"
 clearscreen = "1.0.10"
+process_path = "0.1.4"
+winsafe = { version = "0.0.11", features = ["user", "shell"] }
+winreg = "0.10.1"
